--- a/style.css
+++ b/style.css
@@ -1,3 +1,3 @@
 body{
-  background-image: url("https://i.imgur.com/mrxuPWQ.jpg");
+  background-image: url("https://i.imgur.com/U92qGd8.jpg");
   }
