--- a/style.css
+++ b/style.css
@@ -1,3 +1,3 @@
 body{
-  background-image: url("https://i.imgur.com/sn2jCTP.jpg");
+  background-image: url("https://i.imgur.com/jSnRkB3.jpg");
   }
